--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>My landing page</title>
 </head>
 <body>
-    
+    <div class="header"></div>
+      <div class="content">
+        <div class="top"></div>
+        <div class="center"></div>
+        <div class="quote"></div>
+        <div class="bottom"></div>
+      </div>
+    <div class="footer"></div>
 </body>
 </html>
