Updade style and html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>My landing page</title>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="header-logo">
+            HEADER LOGO
+        </div>
+        <div class="header-links">
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </div>
+    </div>
       <div class="content">
         <div class="top"></div>
         <div class="center"></div>
