--- a/index.html
+++ b/index.html
@@ -20,11 +20,21 @@
         </div>
     </div>
       <div class="content">
-        <div class="top"></div>
+        <div class="top">
+            <div class="text-button">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            </div>
+            <div class="img"></div>
+        </div>
         <div class="center"></div>
         <div class="quote"></div>
         <div class="bottom"></div>
       </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="copyrigth">
+            Copyright © The Odin Project 2023
+        </div>
+    </div>
 </body>
 </html>
