--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             </div>
-            <div class="img"></div>
+            <div class="img">This is a placeholder for an image</div>
         </div>
         <div class="center"></div>
         <div class="quote"></div>
