--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             </div>
-            <div class="img">This is a placeholder for an image</div>
+            <div class="img"><img src="images/illustration2.jpg"></div>
         </div>
-        <div class="center"></div>
+        <div class="center">
+            <h2>Some random information.</h2>
+            <div class="">
+              
+            </div>
+        </div>
         <div class="quote"></div>
         <div class="bottom"></div>
       </div>
