Insert center elements

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         </div>
         <div class="center">
             <h2>Some random information.</h2>
-            <div class="">
-              
+            <div class="illustrations">
+              <img src="images/illustration.jpg">
+              <img src="images/illustration.jpg">
+              <img src="images/illustration.jpg">
+              <img src="images/illustration.jpg">
             </div>
         </div>
         <div class="quote"></div>
