--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
         <div class="center">
             <h2>Some random information.</h2>
             <div class="illustrations">
-              <img src="images/illustration.jpg">
-              <img src="images/illustration.jpg">
-              <img src="images/illustration.jpg">
-              <img src="images/illustration.jpg">
+              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
+              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
+              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
+              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
             </div>
         </div>
-        <div class="quote"></div>
+        <div class="quote">
+            <p>Anybody can become angry - that is easy, but to be angry with the right person and to the right degree and at the right time and for the right purpose, and in the right way - that is not within everybody's power and is not easy.</p>
+            <p>-Aristotle</p>
+        </div>
         <div class="bottom"></div>
       </div>
     <div class="footer">
