Add bottom page content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
             <p>Anybody can become angry - that is easy, but to be angry with the right person and to the right degree and at the right time and for the right purpose, and in the right way - that is not within everybody's power and is not easy.</p>
             <p>-Aristotle</p>
         </div>
-        <div class="bottom"></div>
+        <div class="bottom">
+         <div class="">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking the button right over there!</p>
+         </div>
+         <div class="button">
+            <button>Sign up</button>
+         </div>
+        </div>
       </div>
     <div class="footer">
         <div class="copyrigth">
