--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="text-button">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
             </div>
             <div class="img"><img src="images/illustration2.jpg"></div>
         </div>
