--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
         </div>
         <div class="quote">
-            <p>Anybody can become angry - that is easy, but to be angry with the right person and to the right degree and at the right time and for the right purpose, and in the right way - that is not within everybody's power and is not easy.</p>
-            <p>-Aristotle</p>
+            <p class="quote-text">Anybody can become angry - that is easy, but to be angry with the right person and to the right degree and at the right time and for the right purpose, and in the right way - that is not within everybody's power and is not easy.</p>
+            <p class="quote-author">-Aristotle</p>
         </div>
         <div class="bottom">
          <div class="">
