--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
       <div class="content">
         <div class="top">
-            <div class="text-button">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <div class="top-card">
+                <h1 class="top-h1">This website is awesome</h1>
+                <p class="top-p">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
             <div class="img"><img src="images/illustration2.jpg"></div>
