--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="content">
         <div class="top">
             <div class="top-card">
-                <h1 class="top-h1">This website is awesome</h1>
+                <h1>This website is awesome</h1>
                 <p class="top-p">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
@@ -31,10 +31,10 @@
         <div class="center">
             <h2>Some random information.</h2>
             <div class="illustrations">
-              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
-              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
-              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
-              <div><img src="images/illustration.jpg"><p>this is some subtext under an illustration or an image</p></div>
+              <div class="center-card"><img src="images/illustration.jpg"><p>this is some subtext under an illustration or image</p></div>
+              <div class="center-card"><img src="images/illustration.jpg"><p>this is some subtext under an illustration or image</p></div>
+              <div class="center-card"><img src="images/illustration.jpg"><p>this is some subtext under an illustration or image</p></div>
+              <div class="center-card"><img src="images/illustration.jpg"><p>this is some subtext under an illustration or image</p></div>
             </div>
         </div>
         <div class="quote">
