--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <p class="quote-author">-Aristotle</p>
         </div>
         <div class="bottom">
-         <div class="">
+         <div class="bottom-text">
             <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking the button right over there!</p>
+            <p class="bottom-p">Sign up for our product by clicking the button right over there!</p>
          </div>
          <div class="button">
             <button>Sign up</button>
