--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="top-p">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <div class="img"><img src="images/illustration2.jpg"></div>
+            <div class="img"><img class="large-illustration" src="images/illustration2.jpg"></div>
         </div>
         <div class="center">
             <h2>Some random information.</h2>
